Try to fix offline fallback page

--- a/offline.html
+++ b/offline.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 title: You're offline!
+permalink: /offline/
 ---
 
 <p>It looks like the network connection isn’t working right now. Here's a <a href="/log/">snapshot of all articles</a>.</p>
