Update offline page copy

--- a/offline.html
+++ b/offline.html
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: You're offline!
+title: You are offline
 permalink: /offline/
 ---
 
-<p>It looks like the network connection isn’t working right now. Here's a <a href="/log/">snapshot of all articles</a>.</p>
+<p>Can't connect to the internet right now. Try again later, or see a <a href="/log/">snapshot of all articles</a>.</p>
