Update feed url

--- a/about.html
+++ b/about.html
@@ -11,4 +11,4 @@ permalink: /about/
 </div>
 <p>This website is a platform for me to publish whatever I want to say (including occasional ranting), a place to experiment with various web technologies, and an online gallery of various documents and pieces of work I have produced over the years. </p>
 <p>You don't mind if some of the earlier documents are in Finnish now do you?</p>
-<p><a class="rss" href="https://feeds.feedburner.com/akikoo">Subscribe to <abbr title="Really Simple Syndication">RSS</abbr> feed</a> or <a class="twitter" rel="me" href="https://twitter.com/akikoo">follow me on Twitter</a> (@akikoo) .</p>
+<p><a class="rss" href="https://www.akikoo.org/feed.xml">Subscribe to <abbr title="Really Simple Syndication">RSS</abbr> feed</a> or <a class="twitter" rel="me" href="https://twitter.com/akikoo">follow me on Twitter</a> (@akikoo) .</p>
