Adjust styles and copy

--- a/work.html
+++ b/work.html
@@ -9,13 +9,13 @@ permalink: /work/
   </div>
 </div>
 
-<h2>Selected Projects</h2>
+<h2 class="section-heading">Selected Projects</h2>
 
 {% include projects.html %}
 
-<h2>Experience summary</h2>
+<h2 class="section-heading">Experience summary</h2>
 
-<p>I’m especially experienced in <strong>inclusive UI systems</strong>, <strong>web accessibility</strong>, and <strong>Agile methodologies</strong>. Going forward, I’m eager to take on a Scrum Master role in a medium-sized (or large) product/service design company in Malmö/Öresund region.</p>
+<p>I’m especially skilled in <strong>inclusive UI systems</strong>, <strong>web accessibility</strong>, and <strong>Agile methodologies</strong>. Going forward, I’m eager to take on a Scrum Master role in a medium-sized (or large) product/service design company in Malmö/Öresund region.</p>
 <p><strong>Sweden 2018—present</strong>: <span class="lt-line-clamp__line">Working at Sony </span><span class="lt-line-clamp__line">Mobile Communications, Research and Incubation division in Lund </span>as Consultant from <a href="https://www.oneagency.se/">One Agency</a> (Malmö).</p>
 <p><strong>Denmark 2010—2018</strong>: Worked as Web Accessibility Consultant / Senior UI Developer / Architect at <a href="https://www.socialdigital.dk/">Social Digital</a>, <a href="http://diversa.dk/">Diversa</a>, <a href="http://www.digitaslbi.com/dk/">DigitasLBi</a>, <a href="https://podio.com/">Podio</a> and <a href="http://bownty.com/">Bownty</a> in Copenhagen.</p>
 <p><strong>Belgium 2003—2010</strong>: Worked as Web Designer / Accessibility Specialist / UI Developer for various organizations and agencies in Brussels.</p>
