--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ permalink: /about/
 
 <div class="l-row">
   <div class="l-cell l-cell-8">
-    <p class="vcard projects-intro">I'm <a href="https://www.akikoo.org" class="url fn">Aki K&auml;rkk&auml;inen</a>, a <a href="/work" title="my web life">Senior Web Professional</a>, <a href="https://www.scrum.org/user/405331">aspiring Scrum Master</a><span class="amp"> &amp; </span>music freak living in <span class="adr"><span class="locality">Copenhagen</span>, <span class="country-name">Denmark</span></span>: <strong>akikoo.org</strong> is my personal website. I created this place on the web to let you know who I am, and what I might be able to contribute.</p>
+    <p class="vcard projects-intro">I'm <a href="https://www.akikoo.org" class="url fn">Aki K&auml;rkk&auml;inen</a>, an aspiring <a href="https://www.scrum.org/user/405331">Scrum Master</a>, <a href="/work" title="my web life">Senior Web Professional</a><span class="amp"> &amp; </span>music freak living in <span class="adr"><span class="locality">Copenhagen</span>, <span class="country-name">Denmark</span></span>: <strong>akikoo.org</strong> is my personal website. I created this place on the web to let you know who I am, and what I might be able to contribute.</p>
   </div>
 </div>
 <p>This website is a platform for me to publish whatever I want to say (including occasional ranting), a place to experiment with various web technologies, and an online gallery of various documents and pieces of work I have produced over the years. </p>
