--- a/work.html
+++ b/work.html
@@ -6,18 +6,29 @@ permalink: /work/
 <div class="l-row">
   <div class="l-cell l-cell-8">
     <p class="projects-intro">Here are some selected examples of delivered projects where my role was a mix of research, project planning, accessibility work, design operations and development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I'd be glad to help.</p>
+    <h2>Selected Projects</h2>
   </div>
 </div>
 
-<h2 class="section-heading">Selected Projects</h2>
-
 {% include projects.html %}
 
-<h2 class="section-heading">Experience summary</h2>
+<div class="l-row">
+  <div class="l-cell l-cell-8">
+    <h2 class="mt0">Experience summary</h2>
+    <p>As Scrum Master, my main focus is on people and teams — rather than on a particular technology — to deliver value. I’m especially skilled in Agile methodologies, inclusive UI systems and web accessibility. My current ideal work setting is in a medium-sized (or large) product or service design company in Malmö (Öresund) region.</p>
 
-<p>As Scrum Master, my main focus is on people and teams rather than a particular technology to deliver value. I’m especially skilled in <strong>Agile methodologies (mostly Scrum/Kanban)</strong>, <strong>inclusive UI systems</strong> and <strong>web accessibility</strong>. My current ideal work setting is in a medium-sized (or large) product or service design company in Malmö (Öresund) region.</p>
-<p><strong>Sweden 2018—present</strong>: Working as <a href="https://www.oneagency.se/">One Agency</a> Consultant in projects for various clients, including <a href="https://www.sonymobile.com/global-en/iot-solutions/visilion-logistics/">Sony Mobile Communications</a> in Lund and <a href="https://www.skatteverket.se/">Skatteverket</a> in Malmö.</p>
-<p><strong>Denmark 2010—2018</strong>: Worked as Web Accessibility Consultant / Senior UI Developer / Architect at <a href="https://www.socialdigital.dk/">Social Digital</a>, <a href="http://diversa.dk/">Diversa</a>, <a href="http://www.digitaslbi.com/dk/">DigitasLBi</a>, <a href="https://podio.com/">Podio</a> and <a href="http://bownty.com/">Bownty</a> in Copenhagen.</p>
-<p><strong>Belgium 2003—2010</strong>: Worked as Web Designer / Accessibility Specialist / UI Developer for various organizations and agencies in Brussels.</p>
-<p><strong>Finland 1999—2002</strong>: Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
+    <h3>Sweden 2018—present</h3>
+    <p>Working as <a href="https://www.oneagency.se/">One Agency</a> Consultant in projects for various clients, including <a href="https://www.sonymobile.com/global-en/iot-solutions/visilion-logistics/">Sony Mobile Communications</a> in Lund and <a href="https://www.skatteverket.se/">Skatteverket</a> in Malmö as Scrum Master.</p>
+    
+    <h3>Denmark 2010—2018</h3>
+    <p>Worked as Web Accessibility Consultant / Senior UI Developer / Architect at <a href="https://www.socialdigital.dk/">Social Digital</a>, <a href="http://diversa.dk/">Diversa</a>, <a href="http://www.digitaslbi.com/dk/">DigitasLBi</a>, <a href="https://podio.com/">Podio</a> and <a href="http://bownty.com/">Bownty</a> in Copenhagen.</p>
+
+    <h3>Belgium 2003—2010</h3>
+    <p>Worked as Web Designer / Accessibility Specialist / UI Developer for various organizations and agencies in Brussels.</p>
+    
+    <h3>Finland 1999—2002</h3>
+    <p>Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
+  </div>
+</div>
+
 <div class="l-center-align"><a class="btn btn-secondary ga-github-projects" href="https://www.linkedin.com/in/akikoo/" rel="me">My LinkedIn Profile</a></div>
