--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
     <h2 class="section-heading" id="recent-posts-heading">Recent posts</h2>
   </div>
 
-  <div class="l-constrained hfeed no-margin">
+  <div class="l-constrained hfeed">
     <div class="articles articles--home">
     {% for post in site.posts limit:2 %}
       <div class="articles__item">
