Add link buttons in styleguide

--- a/styleguide.html
+++ b/styleguide.html
@@ -119,6 +119,12 @@ permalink: /styleguide/
   Molecules joined together to form a relatively complex, distinct section of an interface.
 </p>
 
+<h3>Links styled as buttons</h3>
+<div class="module">
+  <a href="#" style="margin-right: 5px" class="btn btn-action">Primary link button</a>
+  <a href="#" class="btn btn-secondary">Secondary link button</a>
+</div>
+
 <h3>Post metadata (in collection)</h3>
 <div class="module">
   {% include post-meta-in-collection.html time=site.time %}
