Update Work experience text

--- a/work.html
+++ b/work.html
@@ -15,7 +15,7 @@ permalink: /work/
 <div class="l-row">
   <div class="l-cell l-cell-8">
     <h2 class="mt0">Experience summary</h2>
-    <p>As Scrum Master, my main focus is on people and teams — rather than on a particular technology — to deliver value. I’m especially skilled in Agile methodologies, inclusive UI systems and web accessibility. My current ideal work setting is in a medium-sized (or large) product or service design company in Malmö (Öresund) region.</p>
+    <p>Building on my long international experience in value creation through team work, inclusive UI systems and web accessibility, I am now focusing on Agile methodologies, communication and servant leadership. As <strong>Scrum Master</strong>, my main interest is on people, teams and the wider organisation — rather than on a particular technology — to continuously improve and deliver value. My current ideal work setting is at an international medium-sized product or service design company in Malmö (Öresund) region, or remote.</p>
 
     <h3>Sweden 2018—present</h3>
     <p>Working as <a href="https://www.oneagency.se/">One Agency</a> Consultant in projects for various clients, including <a href="https://www.sonymobile.com/global-en/iot-solutions/visilion-logistics/">Sony Mobile Communications</a> in Lund and <a href="https://www.skatteverket.se/">Skatteverket</a> in Malmö as Scrum Master.</p>
