Add Clients section on the homepage

--- a/index.html
+++ b/index.html
@@ -9,20 +9,9 @@ title: Home
   </div>
 </section>
 
-<section aria-labelledby="recent-posts-heading">
+<section aria-labelledby="clients-heading">
   <div class="l-constrained l-center-align">
-    <h2 class="section-heading" id="recent-posts-heading">Recent posts</h2>
-  </div>
-
-  <div class="l-constrained hfeed">
-    <div class="articles articles--home">
-    {% for post in site.posts limit:2 %}
-      <div class="articles__item">
-        {% include article.html %}
-      </div>
-    {% endfor %}
-    </div>
+    <h2 class="section-heading" id="clients-heading">Select companies and clients I've worked for</h2>
+    {% include clients.html %}
   </div>
 </section>
-
-{% include navigation-log-home.html %}
