Adapt styles and layout

--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@ title: Home
 </section>
 
 <section aria-labelledby="clients-heading">
+  <div class="l-background-light">
+    <div class="l-constrained l-center-align">
+      <h2 class="section-heading" id="clients-heading">Select companies and clients I've worked for</h2>
+    </div>
+  </div>
+
   <div class="l-constrained l-center-align">
-    <h2 class="section-heading" id="clients-heading">Select companies and clients I've worked for</h2>
     {% include clients.html %}
   </div>
 </section>
