Add card images for social media

--- a/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
+++ b/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
@@ -5,6 +5,8 @@ date: '2021-04-19 19:55:37 +0100'
 categories:
 - motivation
 - general
+image:
+  path: /assets/images/social/places_jyvaskyla.jpg
 ---
 
 <p class="text-intro">This is part one of the series.</p>
