--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -5,6 +5,8 @@ date: '2021-04-20 16:02:19 +0100'
 categories:
 - motivation
 - general
+image:
+  path: /assets/images/social/places_helsinki.jpg
 ---
 
 <p class="text-intro">This is part two of the series.</p>
