--- a/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
+++ b/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
@@ -5,6 +5,8 @@ date: '2021-04-21 12:02:19 +0100'
 categories:
 - motivation
 - general
+image:
+  path: /assets/images/social/places_gothenburg.jpg
 ---
 <p class="text-intro">This is part three of the series.</p>
 
