fix category names in posts (title case)

--- a/_posts/2019-12-31-everything-is-simple-or-complex.html
+++ b/_posts/2019-12-31-everything-is-simple-or-complex.html
@@ -3,8 +3,8 @@ title: Everything Is Simple Or Complex
 excerpt:
 date: '2019-12-31 09:08:38 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
 ---
   
 <p>It's becoming increasingly challenging to navigate the highly complex technology product landscape (not to mention the world!).</p>
