--- a/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
+++ b/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 1 - Jyväskylä
 excerpt:
 date: '2021-04-19 19:55:37 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 image:
   path: /assets/images/social/places_jyvaskyla.jpg
 ---
