--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 2 - Helsinki
 excerpt:
 date: '2021-04-20 16:02:19 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 image:
   path: /assets/images/social/places_helsinki.jpg
 ---
