--- a/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
+++ b/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 4 - Maidenhead
 excerpt:
 date: '2021-04-22 08:27:42 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 image:
   path: /assets/images/social/places_london.jpg
 ---
