--- a/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
+++ b/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 5 - Chamonix-Mont-Blanc
 excerpt:
 date: '2021-04-23 08:13:46 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 image:
   path: /assets/images/social/places_chamonix.jpg
 ---
