--- a/_posts/2021-04-26-places-where-I-have-lived-part-6-paris.html
+++ b/_posts/2021-04-26-places-where-I-have-lived-part-6-paris.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 6 - Paris
 excerpt:
 date: '2021-04-26 16:13:27 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 - Paris
 image:
   path: /assets/images/social/places_paris.jpg
