--- a/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
+++ b/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
@@ -3,8 +3,10 @@ title: Places where I've lived, part 3 - Gothenburg
 excerpt:
 date: '2021-04-21 12:02:19 +0100'
 categories:
-- motivation
-- general
+- Motivation
+- General
+- Traveling
+- Photography
 image:
   path: /assets/images/social/places_gothenburg.jpg
 ---
