Add images to newest posts

--- a/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
+++ b/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
@@ -10,8 +10,12 @@ categories:
 image:
   path: /assets/images/social/places_jyvaskyla.jpg
 ---
-
-<p class="text-intro">This is part one of the series.</p>
+<figure>
+  <img src="/assets/images/posts/places_jyvaskyla_1000w.jpg" alt="" />
+  <figcaption>
+      <p class="figcaption">My father, brushing the snow off the yard in Jyväskylä (Christmas 2008). <i>Photo by Aki Kärkkäinen.</i></p>
+    </figcaption>
+</figure>
 <h2>Jyväskylä, Finland</h2>
 <p>Jyväskylä is my hometown where I started my journey. It's where my dear parents live. It's the Base Camp where I would return to over the years, only to leave again.</p>
 <p>Some background to this series: inspired by Ben Tibbett's mind-blowing mountain photography & climbing book <a href="https://www.bentibbetts.com/alpenglow/">Alpenglow</a>, I started going through my photographs from earlier trips in the Alps. While doing that, I remembered and rediscovered other places I'd been to, or lived in. From there on, the project kind of started to grow uncontrollably. I had to descope it :)</p>
