--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -10,9 +10,14 @@ categories:
 image:
   path: /assets/images/social/places_helsinki.jpg
 ---
-
-<p class="text-intro">This is part two of the series.</p>
+<figure>
+  <img src="/assets/images/posts/places_helsinki_1000w.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">Helsinki (2005). <i>Photo by Aki Kärkkäinen.</i></p>
+  </figcaption>
+</figure>
 <h2>Helsinki, Finland, 1991-1997 / 1998-1999</h2>
 <p>After completing military service in 1991, I moved to Helsinki to play music and to study at the University of Helsinki. At the time, Linus Torvalds was a student there as well - releasing that same year the initial version of Linux.</p>
 <p>However, without dissing anyone or anything here, I thought computer science was extremely boring, so I quit after 4 months. The point is that 1990s in Helsinki was a period of exploration for me, a decade when I continued pursuing my dreams with my first love from the 80s: Music. I went on to study at the Sibelius Academy Jazz Department.</p>
 <p>By the end of that decade, after many both extremely rewarding and challenging years of studying and working in music & teaching, I decided to put music on hold, and pursue a career in the Web. Perhaps technology was a new way to be creative, while working with groups of people, towards greater good? Perhaps it had evolved into something more interesting than what I saw in 1991? I wanted to find out. That meant moving back to my hometown to study information systems, human-computer interaction and economics at the University of Jyväskylä.</p>
+<p>I don't have so many digital photographs from Helsinki to choose from, so this one from 2005 will have to do :)</p>
