--- a/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
+++ b/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
@@ -10,8 +10,12 @@ categories:
 image:
   path: /assets/images/social/places_gothenburg.jpg
 ---
-
-<p class="text-intro">This is part three of the series.</p>
+<figure>
+  <img src="/assets/images/posts/places_gothenburg_1000w.jpg" alt="" />
+  <figcaption>
+      <p class="figcaption">Älvsborgsbron, Gothenburg (2007). <i>Photo by Aki Kärkkäinen.</i></p>
+    </figcaption>
+</figure>
 <h2>Gothenburg (Göteborg), Sweden, 1997-1998</h2>
 <p>In summer 1995, I got the opportunity to play in Jazzorkester Norden, a big band composed of young musicians and music students from all the Nordic countries. It was led by the legendary Slide Hampton, together with the composer and mixer of jazz and Swedish folk music, Bengt-Arne Wallin. </p>
 <p>After rehearsing and playing concerts in Sweden and Denmark, we ended our mini-tour at the <a href="https://www.moldejazz.no/">Molde International Jazz Festival</a> in Norway. I'm very grateful for this chance to meet and play with some great musicians, and do some cultural networking in the Nordics.</p>
