--- a/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
+++ b/_posts/2021-04-22-places-where-I-have-lived-part-4-maidenhead.html
@@ -10,9 +10,13 @@ categories:
 image:
   path: /assets/images/social/places_london.jpg
 ---
-
-<p class="text-intro">This is part four of the series.</p>
+<figure>
+  <img src="/assets/images/posts/places_london_1000w.jpg" alt="" />
+  <figcaption>
+      <p class="figcaption">East End, London (2011). <i>Photo by Aki Kärkkäinen.</i></p>
+    </figcaption>
+  </figure>
 <h2>Maidenhead, England, summer 2000</h2>
-<p>I worked 2-3 months at a hotel in Maidenhead with Erasmus exchange programme. I don't have any digital photos from the town - I need to find them old film photos some day. London is quite close to Maidenhead, so I took the opportunity to explore the different areas of London several days each week. It's a fascinating city.</p>
+<p>I worked 2-3 months at a hotel in Maidenhead with Erasmus exchange programme. I don't have any digital photos from the town - I need to find them old film photos some day. So here's a photo from London (East End, 2011) instead. London is quite close to Maidenhead, so I took the opportunity to explore the different areas of London several days each week. It's a fascinating city.</p>
 <p>I remember one night in London in 2000 when I went to see <a href="https://meshell.com/">Meshell Ndegeocello</a>, a singer-songwriter and bassist, at Shepherd's Bush Empire. The concert was so amazing that I lost the sense of time, narrowly missing the last train back to Maidenhead. I was not even drunk, the music was just so immersive, so stylish and powerful. But I had no place to stay in London. Then I remembered that two of my South African ex-colleagues had mentioned that they'd move to the city. So I called them and took a taxi to their place to sleep a few hours, before taking the train the next morning. That gig was completely worth it!</p>
 <p>Years later, in 2011, I had the pleasure to work in a big international web project that required week-long trips to London. Every night, after inspiring work sessions, you'd find me in one of the good value curry houses around Brick Lane in East London.</p>
