--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -21,3 +21,5 @@ image:
 <p>However, without dissing anyone or anything here, I thought computer science was extremely boring, so I quit after 4 months. The point is that 1990s in Helsinki was a period of exploration for me, a decade when I continued pursuing my dreams with my first love from the 80s: Music. I went on to study at the Sibelius Academy Jazz Department.</p>
 <p>By the end of that decade, after many both extremely rewarding and challenging years of studying and working in music & teaching, I decided to put music on hold, and pursue a career in the Web. Perhaps technology was a new way to be creative, while working with groups of people, towards greater good? Perhaps it had evolved into something more interesting than what I saw in 1991? I wanted to find out. That meant moving back to my hometown to study information systems, human-computer interaction and economics at the University of Jyväskylä.</p>
 <p>I don't have so many digital photographs from Helsinki to choose from, so this one from 2005 will have to do :)</p>
+
+{% include navigation-places.html %}
