Add intro text about the series of places where I've lived

--- a/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
+++ b/_posts/2021-04-19-places-where-I-have-lived-part-1-jyvaskyla.html
@@ -17,6 +17,7 @@ image:
     </figcaption>
 </figure>
 <h2>Jyväskylä, Finland</h2>
+{% include navigation-places-intro.html placecount="One" %}
 <p>Jyväskylä is my hometown where I started my journey. It's where my dear parents live. It's the Base Camp where I would return to over the years, only to leave again.</p>
 <p>Some background to this series: inspired by Ben Tibbett's mind-blowing mountain photography & climbing book <a href="https://www.bentibbetts.com/alpenglow/">Alpenglow</a>, I started going through my photographs from earlier trips in the Alps. While doing that, I remembered and rediscovered other places I'd been to, or lived in. From there on, the project kind of started to grow uncontrollably. I had to descope it :)</p>
 <p>So, I thought it'd be fun to do a series of posts about the places I've lived during my life, and share some stories and reflections about them. I guess both my age and the ongoing coronavirus pandemic contributes to these reflections about this thing called life. This series may include occasional purely subjective and half-serious comparisons of countries :)</p>
