--- a/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
+++ b/_posts/2021-04-21-places-where-I-have-lived-part-3-gothenburg.html
@@ -17,6 +17,7 @@ image:
     </figcaption>
 </figure>
 <h2>Gothenburg (Göteborg), Sweden, 1997-1998</h2>
+{% include navigation-places-intro.html placecount="Three" %}
 <p>In summer 1995, I got the opportunity to play in Jazzorkester Norden, a big band composed of young musicians and music students from all the Nordic countries. It was led by the legendary Slide Hampton, together with the composer and mixer of jazz and Swedish folk music, Bengt-Arne Wallin. </p>
 <p>After rehearsing and playing concerts in Sweden and Denmark, we ended our mini-tour at the <a href="https://www.moldejazz.no/">Molde International Jazz Festival</a> in Norway. I'm very grateful for this chance to meet and play with some great musicians, and do some cultural networking in the Nordics.</p>
 <p>That summer laid the foundation for my next move in 1997: spending a year at the <a href="https://www.gu.se/en/music-drama">Academy of Music and Drama</a>, University of Gothenburg (Göteborg), as an exchange student from Sibelius Academy. The contacts I had made in 1995 with Swedish jazz musicians, including bassist, composer and pedagogue Anders Jormin, and singer and composer Jeanette Lindström, were pivotal in this move. I played a lot, made friends, and improved my Swedish. It wouldn't be a surprise if I lived in Sweden again in the future ;)</p>
