--- a/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
+++ b/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
@@ -17,6 +17,7 @@ image:
   </figcaption>
   </figure>
 <h2>Chamonix-Mont-Blanc, France, summer 2001</h2>
+{% include navigation-places-intro.html placecount="Five" %}
 <p>Year 2021 marks the 20th anniversary of my three months' stay in Chamonix, where I did a traineeship at a local real-estate agency. The project was linked to my studies at the <a href="https://www.jyu.fi/en/">University of Jyväskylä</a>.</p>
 <p>I can still remember my reaction when I saw Mont Blanc for the first time. It knocked my socks off. It blew my mind. It was a total "holy shit moment" for sure (pardon my French!). I was just standing there, breathless, feeling so small and irrelevant, compared to the sheer size and scale of the majestic Mont Blanc massif. It was a transformative experience that put things into a larger perspective for me. Life was never the same after that.</p>
 <p>Having skied my whole childhood and teenage years, I got an introduction to alpinism in Chamonix. It started a passion for mountains that continues to this day. Oh, and the traineeship was good too. My advice has always been that if you get a chance to use an international exchange program, take it! Now, as the "new normal" starts to emerge, it's of course different.</p>
