--- a/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
+++ b/_posts/2021-04-20-places-where-I-have-lived-part-2-helsinki.html
@@ -16,7 +16,7 @@ image:
     <p class="figcaption">Helsinki (2005). <i>Photo by Aki Kärkkäinen.</i></p>
   </figcaption>
 </figure>
-<h2>Helsinki, Finland, 1991-1997 / 1998-1999</h2>
+<h2>Helsinki, Finland, 1991–1997 / 1998–1999</h2>
 {% include navigation-places-intro.html placecount="Two" %}
 <p>After completing military service in 1991, I moved to Helsinki to play music and to study at the University of Helsinki. At the time, Linus Torvalds was a student there as well - releasing that same year the initial version of Linux.</p>
 <p>However, without dissing anyone or anything here, I thought computer science was extremely boring, so I quit after 4 months. The point is that 1990s in Helsinki was a period of exploration for me, a decade when I continued pursuing my dreams with my first love from the 80s: Music. I went on to study at the Sibelius Academy Jazz Department.</p>
