Add new Certifications section and related assets

--- a/work.html
+++ b/work.html
@@ -6,10 +6,10 @@ permalink: /work/
 <div class="l-row">
   <div class="l-cell l-cell-8">
     <p class="text-intro">Here are some selected examples of delivered projects as well as product work where my role was a mix of research, Scrum, Agile methods, Accessibility, DesignOps and UI development. <a href="https://www.linkedin.com/in/akikoo/">Check my LinkedIn profile</a> if you want to know more, or simply ask me :) I'd be glad to help.</p>
-    <h2>Select projects</h2>
   </div>
 </div>
 
+<h2>Select projects</h2>
 {% include projects.html %}
 
 <div class="l-row">
@@ -28,6 +28,9 @@ permalink: /work/
     
     <h3>Finland 1999—2002</h3>
     <p>Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
+
+    <h2>Certifications (Scrum.org)</h2>
+    {% include certifications.html %}
   </div>
 </div>
 
