Add new category

--- a/_posts/2019-07-29-moving-to-malmo.html
+++ b/_posts/2019-07-29-moving-to-malmo.html
@@ -5,6 +5,7 @@ date: '2019-07-29 08:25:55 +0100'
 categories:
 - Malmo
 - Motivation
+- Sweden
 ---
 
 <p>After having worked in Copenhagen for about eight years, I've decided to move to Sweden, to the opposite (east) side of the Öresund bridge. Those sunsets!</p>
