--- a/_posts/2020-12-31-2020-the-year-from-hell.html
+++ b/_posts/2020-12-31-2020-the-year-from-hell.html
@@ -6,6 +6,7 @@ categories:
 - Motivation
 - General
 - Malmo
+- Sweden
 ---
 
 <p><strong>2020</strong>. The year from hell, entirely of our own making (we humans). I've spent most of this lonely pandemic year reading, listening and trying to understand people's behaviour better, including people whose opinions, beliefs and actions are the polar opposite of mine. 2020 was also a wake-up call and an opportunity to try to update and reprogram my System 1.</p>
