--- a/_posts/2021-03-12-fifty-years.html
+++ b/_posts/2021-03-12-fifty-years.html
@@ -5,6 +5,7 @@ date: '2021-03-12 12:03:27 +0100'
 categories:
 - Motivation
 - General
+- Sweden
 ---
 
 <p>Today is my birthday. I'm fifty years old. Before the coronavirus pandemic, I had the wildest dreams on how to spend this day, such as trekking in the high Himalayas or exploring Hokkaido in Japan (to name a few). Instead, we're in the woods in Sweden, which is more sustainable, and not so bad either. The Himalayas can wait.</p>
