--- a/_posts/2021-11-01-the-new-normal.html
+++ b/_posts/2021-11-01-the-new-normal.html
@@ -5,6 +5,7 @@ date: '2021-11-01 19:53:28 +0100'
 categories:
 - Motivation
 - Malmo
+- Sweden
 ---
 
 <p>Today was my first day at the office in 19 months! It was a surreal experience in so many ways. I love my team, so it was really great to see them after so long time. Some of them I'd actually never met IRL, despite having worked with them daily all this time, just remote. It has worked so well because they're great people, as confirmed today! :) In some ways, 1.5 years just disappeared today, between then and now.</p>
