--- a/_posts/2021-12-31-2021-the-prolonged-pandemic.html
+++ b/_posts/2021-12-31-2021-the-prolonged-pandemic.html
@@ -1,6 +1,6 @@
 ---
 title: 2021 - The Prolonged Pandemic
-excerpt:
+excerpt: 2020 was a year from hell - and then came 2021. In this post, I’m going to reflect on what happened this challenging year (and partly the year before), what I did, and what I’ve learned.
 date: '2021-12-31 08:27:46 +0100'
 categories:
 - Motivation
