--- a/_posts/2021-12-31-2021-the-prolonged-pandemic.html
+++ b/_posts/2021-12-31-2021-the-prolonged-pandemic.html
@@ -30,6 +30,7 @@ image:
     <li>More COVID-19 deaths in Sweden alone than the rest of the Nordic countries combined (relative to population).</li> 
     <li>Tens of thousands of people in Sweden affected by <a href="https://en.wikipedia.org/wiki/Long_COVID">Long COVID</a>.</li> 
     <li>Sweden becoming a <a href="https://www.eurosurveillance.org/content/10.2807/1560-7917.ES.2021.26.44.2001996">net exporter of the COVID-19 virus</a> to its Nordic neighbours, mostly to Finland.</li>
+    <li>Sweden having the lowest share of people vaccinated against COVID-19 in the Nordics.</li>
   </ul>
 
 <p>Hardly a successful strategy.</p>
