--- a/_posts/2021-12-31-2021-the-prolonged-pandemic.html
+++ b/_posts/2021-12-31-2021-the-prolonged-pandemic.html
@@ -88,6 +88,7 @@ image:
 <li>Learn more on my journey as Scrum Master, Agile Coach and Change Agent</li>
 <li>Focus on leadership, communication, and remote international teams</li>
 <li>Support my local restaurants more in Malmö area</li>
+<li>Find new ways of reducing my environmental impact, in addition to my earlier efforts: I don't eat meat, and I don't have a car for example</li>
 <li>Continue <a href="https://dariusforoux.com/happiness-usefulness/">being useful</a> for others.</li>
 </ul>
 
