--- a/_posts/2022-03-22-what-is-an-expert.html
+++ b/_posts/2022-03-22-what-is-an-expert.html
@@ -5,7 +5,16 @@ date: '2022-03-22 08:11:23 +0100'
 categories:
 - Motivation
 - General
+image:
+  path: /assets/images/social/being_an_expert.jpg
 ---
+<figure>
+  <img src="/assets/images/posts/being_an_expert.jpg" alt="" />
+  <figcaption>
+    <p class="figcaption">     
+      Photo by <i><a href="https://unsplash.com/@californong">Nong V</a></i> on <a href="https://unsplash.com/s/photos/focus">Unsplash</a>
+  </figcaption>
+</figure>
 
 <p>What does being an "expert" mean in complex knowledge work? That's one of the questions I've been pondering for a while. Last week we discussed it also with my wise colleagues at <a href="https://www.oneagency.se/">One Agency</a>, so I thought I'd post some reflections here :)</p>
 
