Add new category

--- a/_posts/2015-05-17-beagle-launched.html
+++ b/_posts/2015-05-17-beagle-launched.html
@@ -5,6 +5,7 @@ excerpt: A few weeks ago, a small team that I'm part of at Podio launched a new 
 date: '2015-05-17 18:30:07 +0200'
 date_gmt: '2015-05-17 16:30:07 +0200'
 categories:
+- Agile
 - Webdev
 ---
 <p>A few weeks ago, a small team that I'm part of at Podio launched a new product, <a href="https://getbeagle.co/">Beagle</a>, into open public beta. Beagle is a new standalone product to help agencies create more compelling proposals, faster. There will be a lot more features coming - go check the product out! Follow our progress in the <a href="http://blog.getbeagle.co/">Beagle blog</a> and Twitter <a href="https://twitter.com/getbeagle">@getbeagle</a>.</p>
