--- a/_posts/2018-10-07-certified-scrum-master.html
+++ b/_posts/2018-10-07-certified-scrum-master.html
@@ -3,6 +3,7 @@ title: Certified Scrum Master
 excerpt: I just achieved my Professional Scrum Master (PSM I) certification at Scrum.org
 date: '2018-10-07 14:17:38 +0100'
 categories:
+- Agile
 - Motivation
 ---
 
