--- a/_posts/2019-03-05-empowered-product-teams.html
+++ b/_posts/2019-03-05-empowered-product-teams.html
@@ -3,6 +3,7 @@ title: Empowered Product Teams
 excerpt: Empowered product teams
 date: '2019-03-05 18:58:02 +0100'
 categories:
+- Agile
 - Motivation
 ---
 
