--- a/_posts/2019-05-25-mid-2019-reflections.html
+++ b/_posts/2019-05-25-mid-2019-reflections.html
@@ -3,6 +3,7 @@ title: Mid-2019 Reflections
 excerpt: Music, people, culture, languages and communication have been my main interests for as long as I can remember
 date: '2019-05-25 12:11:34 +0100'
 categories:
+- Agile
 - Motivation
 - Accessibility
 - Mindfulness
