--- a/_posts/2019-12-31-everything-is-simple-or-complex.html
+++ b/_posts/2019-12-31-everything-is-simple-or-complex.html
@@ -3,6 +3,7 @@ title: Everything Is Simple Or Complex
 excerpt:
 date: '2019-12-31 09:08:38 +0100'
 categories:
+- Agile
 - Motivation
 - General
 ---
