--- a/_posts/2022-03-22-what-is-an-expert.html
+++ b/_posts/2022-03-22-what-is-an-expert.html
@@ -3,6 +3,7 @@ title: What Is an Expert?
 excerpt: What does being an "expert" mean in complex knowledge work? Here are some reflections.
 date: '2022-03-22 08:11:23 +0100'
 categories:
+- Agile
 - Motivation
 - General
 image:
