--- a/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
+++ b/_posts/2022-06-15-alistair-cockburn-and-the-elephant-carpaccio.html
@@ -3,6 +3,7 @@ title: Alistair Cockburn and the Elephant Carpaccio
 excerpt: Alistair Cockburn's Heart of Agile talk and Elephant Carpaccio exercise.
 date: '2022-06-15 18:37:14 +0100'
 categories:
+- Agile
 - Malmo
 - Motivation
 image:
