--- a/_posts/2009-06-20-stop-showing-clients-static-design-visuals.html
+++ b/_posts/2009-06-20-stop-showing-clients-static-design-visuals.html
@@ -7,6 +7,7 @@ excerpt: 'Time to stop showing clients static design visuals: <a title="http://f
 date: '2009-06-20 18:13:34 +0200'
 date_gmt: '2009-06-20 16:13:34 +0200'
 categories:
+- Agile
 - Webdev
 ---
 <p>Time to stop showing clients static design visuals: <a title="http://forabeautifulweb.com/blog/about/time_to_stop_showing_clients_static_design_visuals/" href="http://tinyurl.com/4wtqou%29" rel="nofollow">http://tinyurl.com/4wtqou)</a>. A very good piece from Malarkey. <a href="http://twitter.com/akikoo/statuses/2254652082" class="aktt_tweet_time">2009-06-20</a></p>
