Add internal navigation to Work page

--- a/work.html
+++ b/work.html
@@ -9,12 +9,21 @@ permalink: /work/
   </div>
 </div>
 
-<h2>Select projects</h2>
+<nav>
+  <p class="is-visuallyhidden">Skip to:</p>
+  <ul class="nav-log nav-log--categories">  
+    <li class="cat-item"><a href="#work-projects">Select projects</a></li>
+    <li class="cat-item"><a href="#work-summary">Experience summary</a></li>
+    <li class="cat-item"><a href="#work-certifications">Certifications (Scrum.org)</a></li>
+  </ul>  
+</nav>
+
+<h2 id="work-projects">Select projects</h2>
 {% include projects.html %}
 
 <div class="l-row">
   <div class="l-cell l-cell-8">
-    <h2 class="mt0">Experience summary</h2>
+    <h2 class="mt0" id="work-summary">Experience summary</h2>
     <p>Building on my long international experience in value creation through team work, inclusive UI systems and web accessibility, I am now focusing on Agile methodologies, communication and servant leadership. As <strong>Scrum Master</strong>, my main interest is on people, teams and the wider organisation — rather than on a particular technology — to continuously improve and deliver value. My current ideal work setting is at an international medium-sized product or service design company in Malmö (Öresund) region, or remote.</p>
 
     <h3>Sweden 2018—present</h3>
@@ -29,7 +38,7 @@ permalink: /work/
     <h3>Finland 1999—2002</h3>
     <p>Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
 
-    <h2>Certifications (Scrum.org)</h2>
+    <h2 id="work-certifications">Certifications (Scrum.org)</h2>
     {% include certifications.html %}
   </div>
 </div>
