Use action (primary) button class

--- a/work.html
+++ b/work.html
@@ -43,4 +43,4 @@ permalink: /work/
   </div>
 </div>
 
-<div class="l-center-align"><a class="btn btn-secondary ga-github-projects" href="https://www.linkedin.com/in/akikoo/" rel="me">My LinkedIn Profile</a></div>
+<div class="l-center-align"><a class="btn btn-action ga-github-projects" href="https://www.linkedin.com/in/akikoo/" rel="me">My LinkedIn Profile</a></div>
