Adapt design on Projects page

--- a/work.html
+++ b/work.html
@@ -12,13 +12,13 @@ permalink: /work/
 <nav>
   <p class="is-visuallyhidden">Skip to:</p>
   <ul class="nav-log nav-log--categories">  
-    <li class="cat-item"><a href="#work-projects">Select projects</a></li>
+    <li class="cat-item"><a href="#work-projects">Selected projects</a></li>
     <li class="cat-item"><a href="#work-summary">Experience summary</a></li>
     <li class="cat-item"><a href="#work-certifications">Certifications (Scrum.org)</a></li>
   </ul>  
 </nav>
 
-<h2 id="work-projects">Select projects</h2>
+<h2 id="work-projects">Selected projects</h2>
 {% include projects.html %}
 
 <div class="l-row">
@@ -37,7 +37,11 @@ permalink: /work/
     
     <h3>Finland 1999—2002</h3>
     <p>Graduated (2002) from the <a title="University of Jyväskylä: Faculty of Information Technology" href="http://www.jyu.fi/it/en/">University of Jyväskylä</a> with a degree of MSc in Economics and Business Administration. Major: <strong>Information Systems Science</strong> / Minors: multimedia, marketing and music.</p>
+  </div>
+</div>
 
+<div class="l-row">
+  <div class="l-cell l-cell-12">
     <h2 id="work-certifications">Certifications (Scrum.org)</h2>
     {% include certifications.html %}
   </div>
