--- a/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
+++ b/_posts/2021-04-23-places-where-I-have-lived-part-5-chamonix-mont-blanc.html
@@ -10,12 +10,12 @@ categories:
 image:
   path: /assets/images/social/places_chamonix.jpg
 ---
-<figure></figure>
+<figure>
   <img src="/assets/images/posts/places_chamonix_1000w.jpg" alt="" />
   <figcaption>
     <p class="figcaption">A view towards south-east from l'Aiguille du Midi (3842m) in March 2006, showing Vallée Blanche and Glacier du Géant, merging into Mer de Glace in the east (to the left, outside this photo). <i>Photo by Aki Kärkkäinen</i>.</p>
   </figcaption>
-  </figure>
+</figure>
 <h2>Chamonix-Mont-Blanc, France, summer 2001</h2>
 {% include navigation-places-intro.html placecount="Five" %}
 <p>Year 2021 marks the 20th anniversary of my three months' stay in Chamonix, where I did a traineeship at a local real-estate agency. The project was linked to my studies at the <a href="https://www.jyu.fi/en/">University of Jyväskylä</a>.</p>
