--- a/_posts/2022-06-30-last-day-at-skatteverket.html
+++ b/_posts/2022-06-30-last-day-at-skatteverket.html
@@ -1,6 +1,6 @@
 ---
 title: Last day at Skatteverket
-excerpt: 
+excerpt: Today's my last day at Skatteverket (The Swedish Tax Agency) as Scrum Master consultant. It's been rewarding to be part of their agile journey.
 date: '2022-06-30 11:41:47 +0100'
 categories:
 - Agile
